--- a/src/app/shop/components/product-card/product-card.html
+++ b/src/app/shop/components/product-card/product-card.html
@@ -1,15 +1,19 @@
+
+
 <div class="card bg-base-100 shadow-sm">
+  @let prod = product();
+
   <figure>
     <img
-      src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
+      [src]="productImage()"
       alt="Shoes" />
   </figure>
   <div class="card-body">
     <h2 class="card-title">
-      Card Title
-      <div class="badge badge-secondary">NEW</div>
+      {{prod.title}}
+      <div class="badge badge-primary">{{prod.gender}}</div>
     </h2>
-    <p>A card component has a figure, a body part, and inside body there are title and actions parts</p>
+    <p>{{prod.description}}</p>
       <div class="card-actions justify-end">
       <button class="btn btn-soft btn-secondary">Comprar</button>
     </div>
