feat: finish section 18

--- a/src/app/shop/components/navbar/navbar.html
+++ b/src/app/shop/components/navbar/navbar.html
@@ -22,40 +22,40 @@
         class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
       >
         <li>
-          <a routerLink="/gender/male" class="btn btn-ghost" routerLinkActive="text-secondary"
+          <a routerLink="/gender/male" class="btn btn-ghost" routerLinkActive="text-primary"
             >Hombres</a
           >
         </li>
         <li>
-          <a routerLink="/gender/female" class="btn btn-ghost" routerLinkActive="text-secondary"
+          <a routerLink="/gender/female" class="btn btn-ghost" routerLinkActive="text-primary"
             >Mujeres</a
           >
         </li>
         <li>
-          <a routerLink="/gender/kids" class="btn btn-ghost" routerLinkActive="text-secondary"
+          <a routerLink="/gender/kids" class="btn btn-ghost" routerLinkActive="text-primary"
             >Kids</a
           >
         </li>
       </ul>
     </div>
     <a class="btn btn-ghost text-xl" routerLink="/"
-      >Katarion <span class="text-secondary"> |</span> Shop</a
+      >Katarion <span class="text-primary"> |</span> Shop</a
     >
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1">
         <li>
-          <a routerLink="/gender/male" class="btn btn-ghost" routerLinkActive="text-secondary"
+          <a routerLink="/gender/men" class="btn btn-ghost" routerLinkActive="text-primary"
             >Hombres</a
           >
         </li>
         <li>
-          <a routerLink="/gender/female" class="btn btn-ghost" routerLinkActive="text-secondary"
+          <a routerLink="/gender/women" class="btn btn-ghost" routerLinkActive="text-primary"
             >Mujeres</a
           >
         </li>
         <li>
-          <a routerLink="/gender/kids" class="btn btn-ghost" routerLinkActive="text-secondary"
+          <a routerLink="/gender/kids" class="btn btn-ghost" routerLinkActive="text-primary"
             >Kids</a
           >
         </li>
