--- a/src/app/admin/pages/products-admin/products-admin.html
+++ b/src/app/admin/pages/products-admin/products-admin.html
@@ -1,1 +1,33 @@
-<p>products-admin works!</p>
+<h1 class="text-2xl font-bold">Listado de productos</h1>
+<h3 class="text-lg">
+  Total de productos
+  <span class="text-accent">{{ productsResource.value()?.count }}</span>
+</h3>
+
+<div class="divider"></div>
+
+<div class="flex gap-2 items-center h-20">
+  <app-pagination
+    [currentPage]="paginationService.currentPage()"
+    [totalPages]="productsResource.value()?.pages ?? 0"
+  ></app-pagination>
+
+  <select
+    class="select select-bordered w-32"
+    (change)="productsPerPage.set(+selectPerPage.value)"
+    #selectPerPage
+    >
+    <option value="5">5</option>
+    <option value="10">10</option>
+    <option value="20">20</option>
+    <option value="50">50</option>
+    <option value="100">100</option>
+  </select>
+
+  <div class="flex flex-1"></div>
+
+  <button class="btn btn-primary" routerLink="/admin/products/new">Nuevo producto</button>
+</div>
+
+<!-- Listado -->
+<app-product-table [products]="productsResource.value()?.products ?? []" />
