--- a/src/app/admin/layouts/admin-layout/admin-layout.html
+++ b/src/app/admin/layouts/admin-layout/admin-layout.html
@@ -36,7 +36,7 @@
             <span class="text-sm text-white/50 hidden md:block">Data Overview</span>
           </div>
         </a>
-        <a routerLink="/admin/list" routerLinkActive="bg-blue-800"
+        <a routerLink="/admin/products" routerLinkActive="bg-blue-800"
           class="w-full px-2 inline-flex space-x-2 items-center border-b border-slate-700 py-3 hover:bg-white/5 transition ease-linear duration-150">
           <div>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
