--- a/src/app/admin/pages/product-admin/product-admin.html
+++ b/src/app/admin/pages/product-admin/product-admin.html
@@ -1,1 +1,11 @@
-<p>product-admin works!</p>
+@if (productResource.isLoading()) {
+<div class="flex justify-center items-center h-screen">
+  <span class="loading loading-spinner loading-lg"></span>
+</div>
+}
+<!--  -->
+
+@if( productResource.hasValue() ) {
+<!-- Producto -->
+<app-product-detail-form [product]="productResource.value()!" />
+}
